--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  supabase_flutter: ^1.6.2
+  flutter_bloc: ^8.1.2
+  intl: ^0.18.0
+  logger: ^1.3.0
+  geolocator: ^9.0.2
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
